--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -14,6 +14,12 @@
     </ion-toolbar>
   </ion-header>
 
+  <h2 class="margen">Listado de cervezas</h2>
+  <ion-button class="custom-button" color="danger">+ Añadir nueva cerveza</ion-button>
+  <br><br>
+  <!-- Por ahora lo pongo con una imagen -->
+  <img class="imagen" src="assets/img/cervezas.png" alt="cervezas">
+
   <div class="container">
     <p>Aquí colocaremos catálogo de cervezas que hemos ido añadiendo.</p>
     <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-34&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
