Listado-cervezas con footer

--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -24,4 +24,10 @@
     <p>Aquí colocaremos catálogo de cervezas que hemos ido añadiendo.</p>
     <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-34&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
   </div>
+
+    <footer>
+      <h1>545/2100 kcal</h1>
+      <p>Recuperadas/Gastadas</p>
+    </footer>
+    
 </ion-content>
