--- a/src/app/pages/beer-catalog/beer-catalog.page.scss
+++ b/src/app/pages/beer-catalog/beer-catalog.page.scss
@@ -11,3 +11,12 @@ ion-button.custom-button {
 .imagen {
     width: 300px;
 }
+
+footer {
+    display: block;
+    background-color: #003547;
+    text-align: center;
+    padding: 1px;
+    margin-top: 100%;
+    width: 100%;
+}
