--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -15,7 +15,7 @@
   </ion-header>
 
   <h2 class="margen">Listado de cervezas</h2>
-  <ion-button class="custom-button" color="danger">+ Añadir nueva cerveza</ion-button>
+  <ion-button>+ Añadir nueva cerveza</ion-button>
   <br><br>
   <!-- Por ahora lo pongo con una imagen -->
   <img class="imagen" src="assets/img/cervezas.png" alt="cervezas">
