--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -1,33 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Catálogo de cervezas</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">beer-catalog</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="content-wrapper">
 
-  <h2 class="margen">Listado de cervezas</h2>
-  <ion-button>+ Añadir nueva cerveza</ion-button>
-  <br><br>
-  <!-- Por ahora lo pongo con una imagen -->
-  <img class="imagen" src="assets/img/cervezas.png" alt="cervezas">
+    <ion-header [translucent]="true">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Listado de cervezas</ion-title>
+      </ion-toolbar>
+    </ion-header>
 
-  <div class="container">
-    <p>Aquí colocaremos catálogo de cervezas que hemos ido añadiendo.</p>
-    <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-34&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">beer-catalog</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <h2 class="mr-10">Listado de cervezas</h2>
+    <ion-button>+ Añadir nueva cerveza</ion-button>
+    <br><br>
+
+    <!-- Por ahora lo pongo con una imagen -->
+    <img class="image" src="assets/img/cervezas.png" alt="cervezas">
+
+    <div class="container">
+      <p>Aquí colocaremos catálogo de cervezas que hemos ido añadiendo.</p>
+      <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-34&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
+    </div>
+
   </div>
 
-    <footer>
-      <h1>545/2100 kcal</h1>
-      <p>Recuperadas/Gastadas</p>
-    </footer>
-    
+  <footer>
+    <h1>545/2100 kcal</h1>
+    <p>Recuperadas/Gastadas</p>
+  </footer>
+
 </ion-content>
