--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -6,7 +6,7 @@
         <ion-buttons slot="start">
           <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>Listado de cervezas</ion-title>
+        <ion-title>Catálogo de cervezas</ion-title>
       </ion-toolbar>
     </ion-header>
 
@@ -16,7 +16,7 @@
       </ion-toolbar>
     </ion-header>
 
-    <h2 class="mr-10">Listado de cervezas</h2>
+    <h2 class="mr-10">Catálogo de cervezas</h2>
     <ion-button>+ Añadir nueva cerveza</ion-button>
     <br><br>
 
