--- a/src/app/pages/add-beer/add-beer.page.html
+++ b/src/app/pages/add-beer/add-beer.page.html
@@ -8,14 +8,50 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div className="prueba">
+    <ion-item>
+      <ion-input type="text">Nombre de la Cerveza</ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Volumen</ion-label>
+      <ion-input type="number"></ion-input>
+      <ion-select>
+        <ion-select-option value="l">l</ion-select-option>
+        <ion-select-option value="cl">cl</ion-select-option>
+        <ion-select-option value="ml">ml</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Valor energético por volumen (ml)</ion-label>
+      <ion-input type="number"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Subir imagen</ion-label>
+      <ion-input type="file"></ion-input>
+    </ion-item>
+    <div>
+      <ion-button shape="round" type="submit">Agregar</ion-button>
+    </div>
+  </div>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">add-beer</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div class="container">
+  <!-- <div class="container bg-blue-500 mx-4">
     <p>Pantalla con formulario para añadir nueva cerveza.</p>
-    <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=2-58&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
-  </div>
+    <p>
+      Diseño:
+      <a
+        href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=2-58&mode=design&t=VWPzGyJKIu9wiES1-4"
+        target="_blank"
+        >link</a
+      >
+    </p>
+    <p>545/2100 kcal Recuperadas/Gastadas</p>
+  </div> -->
 </ion-content>
