--- a/src/app/pages/add-beer/add-beer.page.html
+++ b/src/app/pages/add-beer/add-beer.page.html
@@ -32,7 +32,7 @@
       <ion-label>Subir imagen</ion-label>
       <ion-input type="file"></ion-input>
     </ion-item>
-    <div>
+    <div class="prueba">
       <ion-button shape="round" type="submit">Agregar</ion-button>
     </div>
   </div>
