--- a/src/app/pages/add-beer/add-beer.page.scss
+++ b/src/app/pages/add-beer/add-beer.page.scss
@@ -39,8 +39,11 @@ ion-item {
 
   .prueba
   {
+    display: flex;
     margin: auto;
     margin-top: 20px;
     display: flex;
+    text-align: center;
     justify-content: center;
+    align-items: center;
   }
