--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -16,17 +16,17 @@
       </ion-toolbar>
     </ion-header>
 
-    <h2 class="mr-10">Catálogo de cervezas</h2>
+    <h2 class="mr">Catálogo de cervezas</h2>
     <ion-button>+ Añadir nueva cerveza</ion-button>
     <br><br>
 
     <!-- Por ahora lo pongo con una imagen -->
-    <img class="image" src="assets/img/cervezas.png" alt="cervezas">
+    <img class="image mr" src="assets/img/cervezas.png" alt="cervezas">
 
-    <div class="container">
+    <!-- <div class="container">
       <p>Aquí colocaremos catálogo de cervezas que hemos ido añadiendo.</p>
       <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-34&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
-    </div>
+    </div> -->
 
   </div>
 
