--- a/src/app/pages/add-beer/add-beer.page.html
+++ b/src/app/pages/add-beer/add-beer.page.html
@@ -1,13 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Añadir cerveza</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
+  <div class="content-wrapper">
+
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Añadir cerveza</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <div className="prueba">
     <ion-item>
       <ion-input type="text">Nombre de la Cerveza</ion-input>
@@ -54,4 +56,10 @@
     </p>
     <p>545/2100 kcal Recuperadas/Gastadas</p>
   </div> -->
+</div>
+
+<footer>
+  <h1>545/2100 kcal</h1>
+  <p>Recuperadas/Gastadas</p>
+</footer>
 </ion-content>
