--- a/src/app/pages/add-beer/add-beer.page.html
+++ b/src/app/pages/add-beer/add-beer.page.html
@@ -12,7 +12,7 @@
 
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large">add-beer</ion-title>
+        <!-- <ion-title size="large">add-beer</ion-title> -->
       </ion-toolbar>
     </ion-header>
 
