--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -12,11 +12,10 @@
 
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large">beer-catalog</ion-title>
+        <!-- <ion-title size="large">beer-catalog</ion-title> -->
       </ion-toolbar>
     </ion-header>
 
-    <h2 class="mr">Catálogo de cervezas</h2>
     <ion-button>+ Añadir nueva cerveza</ion-button>
     <br><br>
 
