--- a/src/app/pages/daily-summary/daily-summary.page.html
+++ b/src/app/pages/daily-summary/daily-summary.page.html
@@ -1,21 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Resumen del día</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">daily-summary</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="content-wrapper">
 
-  <div class="container">
-    <p>Aquí colocaremos resumen del consumo durante el ciclo/día actual.</p>
-    <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-2&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a> </p>
+    <ion-header [translucent]="true">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Resumen del día</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <!-- <ion-title size="large">daily-summary</ion-title> -->
+      </ion-toolbar>
+    </ion-header>
+
+    <div class="container">
+      <p>Aquí colocaremos resumen del consumo durante el ciclo/día actual.</p>
+      <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-2&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a> </p>
+    </div>
   </div>
+
+  <footer>
+    <h1>545/2100 kcal</h1>
+    <p>Recuperadas/Gastadas</p>
+  </footer>
+
 </ion-content>
