--- a/src/app/pages/add-beer/add-beer.page.scss
+++ b/src/app/pages/add-beer/add-beer.page.scss
@@ -1,4 +1,10 @@
-ion-item {
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.itemStyle {
     --background: #cfd3d1;
     --color: #fff;
   
@@ -12,12 +18,6 @@ ion-item {
     --detail-icon-font-size: 20px;
     width: 350px;
     margin-top: 15px;
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-left: auto;
-    */
   } 
 
   ion-label {
@@ -27,19 +27,7 @@ ion-item {
     text-align: start;
   }
 
-
-  /* ion-button {
-    --border-color: #fff;
-    --border-width: 2px;
-    --border-radius: 6px;
-    margin: auto;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-  } */
-
-  .prueba
-  {
+  .prueba {
     display: flex;
     margin: auto;
     margin-top: 20px;
@@ -49,14 +37,9 @@ ion-item {
     align-items: center;
   }
 
-  .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-  }
-
   ion-button {
     --background: #E1523D;
+    text-transform: capitalize ;
   }
 
   footer {
