--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -26,11 +26,15 @@
     <br>
 
     <!-- Por ahora lo pongo con una imagen -->
-    <img class="image mr" src="assets/img/cervezas.png" alt="cervezas">
+    <div class="centrado">
+      <img class="image" src="assets/img/cervezas.png" alt="cervezas">
+    </div>
 
     <br>
 
-    <ion-button shape="round">{{ "ADDBEERBUTTON" | translate }}</ion-button>
+    <div class="centrado">
+      <ion-button shape="round">{{ "ADDBEERBUTTON" | translate }}</ion-button>
+    </div>
   </div>
 
   <footer>
