--- a/src/app/pages/daily-summary/daily-summary.page.html
+++ b/src/app/pages/daily-summary/daily-summary.page.html
@@ -23,9 +23,25 @@
       </ion-select>
     </ion-item>
 
-    <div class="container">
-      <p>Aquí colocaremos resumen del consumo durante el ciclo/día actual.</p>
-      <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=1-2&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a> </p>
+    <br>
+
+    <ion-item class="itemStyle mr">
+      <ion-input type="text">{{ "KCALWORN" | translate }}</ion-input>
+    </ion-item>
+
+    <br>
+
+    <div class="centrado">
+      <ion-button shape="round" type="submit">{{ "ADDKCALBUTTON" | translate }}</ion-button>
+    </div>
+    
+    <h1 class="mr">{{ "BEERSTODAY" | translate }}</h1>
+
+    <p class="mr">{{ "ITEM1" | translate }}</p>
+    <p class="mr">{{ "ITEM2" | translate }}</p>
+
+    <div class="centrado">
+      <ion-button shape="round">{{ "THELASTBUTTON" | translate }}</ion-button>
     </div>
   </div>
 
