cambios multi idioma

--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -25,7 +25,7 @@
 
     <br>
 
-    <!-- Por ahora lo pongo con una imagen -->
+    <!-- Por ahora lo pongo con una imagen cambiarlo por una tabla-->
     <div class="centrado">
       <img class="image" src="assets/img/cervezas.png" alt="cervezas">
     </div>
