--- a/src/app/pages/stats/stats.page.html
+++ b/src/app/pages/stats/stats.page.html
@@ -23,10 +23,13 @@
       </ion-select>
     </ion-item>
 
-    <div class="container">
-      <p>Aquí colocaremos las estádisiticas de consumo de todos los días.</p>
-      <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=2-93&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
-    </div>
+    <p class="mr">{{ "DAY1" | translate }}</p>
+    <p class="mr">{{ "ITEM3" | translate }}</p>
+    <p class="mr">{{ "ITEM4" | translate }}</p>
+    <p class="mr">{{ "DAY2" | translate }}</p>
+    <p class="mr">{{ "ITEM5" | translate }}</p>
+    <p class="mr">{{ "ITEM6" | translate }}</p>
+    <p class="mr">...</p>
   </div>
 
   <footer>
