--- a/src/app/pages/stats/stats.page.scss
+++ b/src/app/pages/stats/stats.page.scss
@@ -4,6 +4,11 @@
     min-height: 100%;
 }
 
+.centrado {
+    display: flex;
+    justify-content: center;
+}
+
 footer {
     background-color: #003547;
     color: white;
