--- a/src/app/pages/daily-summary/daily-summary.page.html
+++ b/src/app/pages/daily-summary/daily-summary.page.html
@@ -25,24 +25,34 @@
 
     <br>
 
-    <ion-item class="itemStyle mr">
-      <ion-input type="text">{{ "KCALWORN" | translate }}</ion-input>
-    </ion-item>
-
+    <div class="centrado">
+      <ion-item class="itemStyle">
+        <ion-input type="text">{{ "KCALWORN" | translate }}</ion-input>
+      </ion-item>  
+    </div>
+    
     <br>
 
     <div class="centrado">
       <ion-button shape="round" type="submit">{{ "ADDKCALBUTTON" | translate }}</ion-button>
     </div>
-    
-    <h1 class="mr">{{ "BEERSTODAY" | translate }}</h1>
 
-    <p class="mr">{{ "ITEM1" | translate }}</p>
-    <p class="mr">{{ "ITEM2" | translate }}</p>
+    <div class="centrado">
+      <h1>{{ "BEERSTODAY" | translate }}</h1>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "ITEM1" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "ITEM2" | translate }}</p>
+    </div>
 
     <div class="centrado">
       <ion-button shape="round">{{ "THELASTBUTTON" | translate }}</ion-button>
     </div>
+    
   </div>
 
   <footer>
