--- a/src/app/pages/stats/stats.page.html
+++ b/src/app/pages/stats/stats.page.html
@@ -23,10 +23,34 @@
       </ion-select>
     </ion-item>
 
-    <div class="container">
-      <p>Aquí colocaremos las estádisiticas de consumo de todos los días.</p>
-      <p>Diseño: <a href="https://www.figma.com/file/4tAW2txIqmRbdPBHyq02lU/Beerstagram?type=design&node-id=2-93&mode=design&t=VWPzGyJKIu9wiES1-4" target="_blank">link</a></p>
+    <div class="centrado">
+      <p>{{ "DAY1" | translate }}</p>
     </div>
+    
+    <div class="centrado">
+      <p>{{ "ITEM3" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "ITEM4" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "DAY2" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "ITEM5" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "ITEM6" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>...</p>
+    </div>
+
   </div>
 
   <footer>
