--- a/src/app/pages/daily-summary/daily-summary.page.html
+++ b/src/app/pages/daily-summary/daily-summary.page.html
@@ -34,12 +34,19 @@
     <div class="centrado">
       <ion-button shape="round" type="submit">{{ "ADDKCALBUTTON" | translate }}</ion-button>
     </div>
-    
-    <h1 class="mr">{{ "BEERSTODAY" | translate }}</h1>
 
-    <p class="mr">{{ "ITEM1" | translate }}</p>
-    <p class="mr">{{ "ITEM2" | translate }}</p>
+    <div class="centrado">
+      <h1>{{ "BEERSTODAY" | translate }}</h1>
+    </div>
 
+    <div class="centrado">
+      <p>{{ "ITEM1" | translate }}</p>
+    </div>
+
+    <div class="centrado">
+      <p>{{ "ITEM2" | translate }}</p>
+    </div>
+  
     <div class="centrado">
       <ion-button shape="round">{{ "THELASTBUTTON" | translate }}</ion-button>
     </div>
