--- a/src/app/pages/stats/stats.page.html
+++ b/src/app/pages/stats/stats.page.html
@@ -12,11 +12,7 @@
 
     <!-- Selector de idioma -->
     <ion-item>
-      <ion-select
-            label="Idioma"
-            placeholder="Idioma"
-            (ionChange)="changeLanguage($event)"
-            [value]="currentLang">
+      <ion-select label="Idioma" placeholder="Idioma" (ionChange)="changeLanguage($event)" [value]="currentLang">
         <ion-select-option value="es">Español</ion-select-option>
         <ion-select-option value="ca">Català</ion-select-option>
         <ion-select-option value="en">English</ion-select-option>
@@ -26,7 +22,7 @@
     <div class="centrado">
       <p>{{ "DAY1" | translate }}</p>
     </div>
-    
+
     <div class="centrado">
       <p>{{ "ITEM3" | translate }}</p>
     </div>
@@ -57,5 +53,5 @@
     <h1>545/2100 kcal</h1>
     <p>{{ "FOOTER" | translate }}</p>
   </footer>
-  
+
 </ion-content>
