--- a/src/app/pages/add-beer/add-beer.page.html
+++ b/src/app/pages/add-beer/add-beer.page.html
@@ -124,7 +124,7 @@
       <div class="centrado">
         <ion-item class="itemStyle">
           <ion-label>{{ "UPIMAGE" | translate }}</ion-label>
-          <!-- Aquí puedes agregar tu lógica para manejar la carga de imágenes -->
+          <ion-input type="file"></ion-input>
         </ion-item>
       </div>
 
