correccion de base de datos y creacion de card en el componente catalago

--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -1,6 +1,5 @@
 <ion-content [fullscreen]="true">
   <div class="content-wrapper">
-
     <ion-header [translucent]="true">
       <ion-toolbar>
         <ion-buttons slot="start">
@@ -12,31 +11,71 @@
 
     <!-- Selector de idioma -->
     <ion-item>
-      <ion-select label="Idioma" placeholder="Idioma" (ionChange)="changeLanguage($event)" [value]="currentLang">
+      <ion-select
+        label="Idioma"
+        placeholder="Idioma"
+        (ionChange)="changeLanguage($event)"
+        [value]="currentLang"
+      >
         <ion-select-option value="es">Español</ion-select-option>
         <ion-select-option value="ca">Català</ion-select-option>
         <ion-select-option value="en">English</ion-select-option>
       </ion-select>
     </ion-item>
 
-    <br>
+    <br />
 
     <!-- Por ahora lo pongo con una imagen cambiarlo por una tabla-->
-    <div class="centrado">
-      <img class="image" src="assets/img/cervezas.png" alt="cervezas">
+    <!-- <div class="centrado">
+      <img class="image" src="assets/img/cervezas.png" alt="cervezas" />
+    </div> -->
+    <!-- <div>
+      <ul>
+        <li *ngFor="let cerveza of cerveza" (click)="logCerveza(cerveza)">
+          {{cerveza.beerName}}
+          <ion-icon
+            (click)="updateCerveza(cerveza)"
+            name="create-outline"
+          ></ion-icon>
+        </li>
+      </ul>
+    </div> -->
+    <br />
+    <!-- Tarjetas de cerveza -->
+    <div *ngFor="let cerveza of cerveza">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title
+            >{{cerveza.beerName}} <ion-icon name="beer-outline"></ion-icon
+          ></ion-card-title>
+        </ion-card-header>
+
+        <ion-card-content>
+          <p>Volumen: {{cerveza.beerVolume}} {{cerveza.beerVolumeUnit}}</p>
+          <p>Valor energético: {{cerveza.beerEnergyValue}}</p>
+          <p *ngIf="cerveza.image">Imagen: {{cerveza.image}}</p>
+          <ion-icon
+            (click)="updateCerveza(cerveza)"
+            name="beer-outline"
+          ></ion-icon>
+          <ion-button (click)="eliminarCerveza(cerveza)" shape="round"
+            >Eliminar</ion-button
+          >
+        </ion-card-content>
+      </ion-card>
     </div>
 
-    <br>
+    <br />
 
     <div class="centrado">
-      <ion-button shape="round">{{ "ADDBEERBUTTON" | translate }}</ion-button>
+      <ion-button (click)="navegarAPagina()" shape="round"
+        >{{ "ADDBEERBUTTON" | translate }}</ion-button
+      >
     </div>
-    
   </div>
 
   <footer>
     <h1>545/2100 kcal</h1>
     <p>{{ "FOOTER" | translate }}</p>
   </footer>
-
 </ion-content>
