--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -51,15 +51,15 @@
         </ion-card-header>
 
         <ion-card-content>
-          <p>Volumen: {{cerveza.beerVolume}} {{cerveza.beerVolumeUnit}}</p>
-          <p>Valor energético: {{cerveza.beerEnergyValue}}</p>
-          <p *ngIf="cerveza.image">Imagen: {{cerveza.image}}</p>
+          <p> {{ "VOLUME" | translate }}: {{cerveza.beerVolume}} {{cerveza.beerVolumeUnit}}</p>
+          <p> {{ "VALUEENERGY" | translate }}: {{cerveza.beerEnergyValue}}</p>
+          <p *ngIf="cerveza.image"> {{ "ENERGYVALUE" | translate }}: {{cerveza.image}}</p>
           <ion-icon
             (click)="updateCerveza(cerveza)"
             name="beer-outline"
           ></ion-icon>
           <ion-button (click)="eliminarCerveza(cerveza)" shape="round"
-            >Eliminar</ion-button
+            > {{ "DELETE" | translate }} </ion-button
           >
         </ion-card-content>
       </ion-card>
