--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -51,16 +51,22 @@
         </ion-card-header>
 
         <ion-card-content>
-          <p> {{ "VOLUME" | translate }}: {{cerveza.beerVolume}} {{cerveza.beerVolumeUnit}}</p>
-          <p> {{ "VALUEENERGY" | translate }}: {{cerveza.beerEnergyValue}}</p>
-          <p *ngIf="cerveza.image"> {{ "ENERGYVALUE" | translate }}: {{cerveza.image}}</p>
+          <p>
+            {{ "VOLUME" | translate }}: {{cerveza.beerVolume}}
+            {{cerveza.beerVolumeUnit}}
+          </p>
+          <p>{{ "VALUEENERGY" | translate }}: {{cerveza.beerEnergyValue}}</p>
+          <p *ngIf="cerveza.image">
+            {{ "ENERGYVALUE" | translate }}: {{cerveza.image}}
+          </p>
           <ion-icon
             (click)="updateCerveza(cerveza)"
             name="beer-outline"
           ></ion-icon>
-          <ion-button (click)="eliminarCerveza(cerveza)" shape="round"
-            > {{ "DELETE" | translate }} </ion-button
-          >
+          <ion-button (click)="eliminarCerveza(cerveza)" shape="round">
+            {{ "DELETE" | translate }}
+          </ion-button>
+          <ion-button (click)="updateCerveza(cerveza)"shape="round">Editar</ion-button>
         </ion-card-content>
       </ion-card>
     </div>
