--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -67,6 +67,7 @@
             {{ "DELETE" | translate }}
           </ion-button>
           <ion-button (click)="updateCerveza(cerveza)"shape="round">Editar</ion-button>
+          <ion-button (click)="setResumen(cerveza)">test</ion-button>
         </ion-card-content>
       </ion-card>
     </div>
