--- a/src/app/pages/beer-catalog/beer-catalog.page.scss
+++ b/src/app/pages/beer-catalog/beer-catalog.page.scss
@@ -25,3 +25,11 @@ footer {
     text-align: center;
     padding: 5px;
 }
+
+
+
+/* Limitar el tamaño máximo de la imagen a 200px */
+.custom-image {
+    max-width: 200px;
+  }
+  
