--- a/src/app/pages/add-beer/add-beer.page.html
+++ b/src/app/pages/add-beer/add-beer.page.html
@@ -148,10 +148,12 @@
           <ion-label>{{ "UPIMAGE" | translate }}</ion-label>
           <ion-input type="file"></ion-input>
         </ion-item> -->
-        <p *ngIf="base64">
-          IMAGE<br />
-          <img [src]="base64" />
-        </p>
+        <ion-item class="itemStyle">
+          <p *ngIf="base64">
+            Imagen:<br />
+            <img [src]="base64" />
+          </p>
+        </ion-item>
       </div>
 
       <br />
