--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -57,15 +57,15 @@
           </p>
           <p>{{ "VALUEENERGY" | translate }}: {{cerveza.beerEnergyValue}}</p>
           <p *ngIf="cerveza.image">
-            {{ "ENERGYVALUE" | translate }}<br />
+            {{ "IMAGE" | translate }}<br />
             <img [src]="cerveza.image" class="custom-image" />
           </p>
 
           <ion-button (click)="eliminarCerveza(cerveza)" shape="round">
-            {{ "DELETE" | translate }}-><ion-icon name="beer-outline"></ion-icon>
+            {{ "DELETE" | translate }} &#8680; <ion-icon name="beer-outline"></ion-icon>
           </ion-button>
           <ion-button (click)="updateCerveza(cerveza)" shape="round"
-            >Editar-> <ion-icon name="beer-outline"></ion-icon
+            >{{ "EDIT" | translate }} &#8680; <ion-icon name="beer-outline"></ion-icon
           ></ion-button>
           <ion-button (click)="setResumen(cerveza)">test</ion-button>
         </ion-card-content>
