--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -57,7 +57,7 @@
           </p>
           <p>{{ "VALUEENERGY" | translate }}: {{cerveza.beerEnergyValue}}</p>
           <p *ngIf="cerveza.image">
-            {{ "IMAGE" | translate }}<br />
+            {{ "IMAGE" | translate }}:<br />
             <img [src]="cerveza.image" class="custom-image" />
           </p>
 
