--- a/src/app/pages/daily-summary/daily-summary.page.html
+++ b/src/app/pages/daily-summary/daily-summary.page.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <!-- recuperando datos del dia prueba  -->
-  <div>
+  <!--  <div>
     <h1>prueba de recibir datos</h1>
     <p>Fecha: {{ consumoDiario?.fecha }}</p>
 
@@ -73,8 +73,17 @@
       </li>
     </ul>
     <p>Total de calorías Recuperadas: {{ totalEnergyValue }} kcal</p>
+  </div> -->
+  <div *ngIf="consumoDiario">
+    <h1>Consumo Diario</h1>
+    <p>Fecha: {{ consumoDiario.fecha }}</p>
+    <ul>
+      <li *ngFor="let cerveza of consumoDiario.cervezas">
+        {{ cerveza.beerName }}: {{ cerveza.beerEnergyValue }} kcal
+      </li>
+    </ul>
+    <p>Total de calorías Recuperadas: {{ totalEnergyValue }} kcal</p>
   </div>
-
   <footer>
     <h1>545/2100 kcal</h1>
     <p>{{ "FOOTER" | translate }}</p>
