--- a/src/app/pages/daily-summary/daily-summary.page.html
+++ b/src/app/pages/daily-summary/daily-summary.page.html
@@ -84,6 +84,21 @@
     </ul>
     <p>Total de calorías Recuperadas: {{ totalEnergyValue }} kcal</p>
   </div>
+  <ion-content>
+
+    <ion-list>
+      <ion-item *ngFor="let consumo of consumos">
+      
+        <h2>{{consumo.fecha}}</h2>
+        
+        <p *ngFor="let cerveza of consumo.cervezas">
+          {{cerveza.beerName}}
+        </p>
+        
+      </ion-item>
+    </ion-list>
+  
+  </ion-content>
   <footer>
     <h1>545/2100 kcal</h1>
     <p>{{ "FOOTER" | translate }}</p>
