--- a/src/app/pages/beer-catalog/beer-catalog.page.html
+++ b/src/app/pages/beer-catalog/beer-catalog.page.html
@@ -67,7 +67,7 @@
           <ion-button (click)="updateCerveza(cerveza)" shape="round"
             >{{ "EDIT" | translate }} &#8680; <ion-icon name="beer-outline"></ion-icon
           ></ion-button>
-          <ion-button (click)="setResumen(cerveza)">test</ion-button>
+          <ion-button (click)="setResumen(cerveza)">+</ion-button>
         </ion-card-content>
       </ion-card>
     </div>
